--- a/scroll/src/app/app.component.html
+++ b/scroll/src/app/app.component.html
@@ -31,16 +31,8 @@
           *ngFor="let artist of artists"
           (click)= "showArtist(artist)"
           [style.backgroundColor]="artist.highlight ? '#EEE' : '#FFF'">
-              <div class="media">
-                <img class="mr-3 rounded align-self-center img-fluid" style="width: 70px;" 
-                src="./assets/images/index.jpeg" alt="">
-                <!-- Når man skal loope kan src se sådan her ud : -->
-                <!--src="{{'.assets/images/'+ artist.shortname + '_tn.jpg'}}" -->
-                <div class="media-body align-self-center">
-                  <h5 class="m-0"> {{ artist.name }}</h5>
-                  {{ artist.reknown }}
-                </div><!-- media body -->
-              </div><!-- media -->
+          <app-artist-items [artist]="artist" ></app-artist-items>
+          
           </a><!-- link -->
         </div><!-- list-group -->
       </div><!-- col -->
