--- a/scroll/src/app/app.component.html
+++ b/scroll/src/app/app.component.html
@@ -9,7 +9,7 @@
 <div class="row justify-content-center">
   <div class="card mt-sm-3 col-md-8">
     <div class="card-body">
-      <h3 class="mb-0">Artist Directory</h3>
+      <h3 class="mb-0">Danny bois</h3>
       <div class="form-group">
         <div class="form-label"
         *ngIf="query">
