--- a/scroll/src/app/artist-details/artist-details.component.html
+++ b/scroll/src/app/artist-details/artist-details.component.html
@@ -2,12 +2,12 @@
   <div class="row justify-content-center">
     <div class="col-sm-4 col-lg-3">
       <!--HUSK AT ÆNDRE IMAGE HER....src="assets/images/{{artist.shortname}}.jpg"-->
-      <img class="img-fluid rounded" src="assets/images/index.jpeg" alt="{{artist.name}} photo">
+      <img class="img-fluid rounded" src="{{'http://35.198.82.252'+ artist.image.url}}" alt="{{artist.name}} photo">
     </div>
     <div class="col-sm-8 col-lg-4">
       <h2 class="mt-3 mt-sm-0 mb-0">{{artist.name}}</h2>
-      <h4 class="mt-0">{{artist.reknown}}</h4>
-      <p>{{artist.bio}}</p>
+      <h4 class="mt-0">{{artist.story}}</h4>
+      <p>Billed info: {{artist.image.name }}</p>
     </div>
   </div>
 </div>
