--- a/scroll/src/app/artist-items/artist-items.component.html
+++ b/scroll/src/app/artist-items/artist-items.component.html
@@ -1,10 +1,12 @@
 <div class="media">
   <img class="mr-3 rounded align-self-center img-fluid" style="width: 70px;" 
-  src="./assets/images/index.jpeg" alt="">
+  src="{{'http://35.198.82.252'+ artist.image.url}}" alt="">
+    <!-- -->
+
   <!-- Når man skal loope kan src se sådan her ud : -->
   <!--src="{{'.assets/images/'+ artist.shortname + '_tn.jpg'}}" -->
   <div class="media-body align-self-center">
     <h5 class="m-0"> {{ artist.name }}</h5>
-    {{ artist.reknown }}
+    {{ artist.story }}
   </div><!-- media body -->
 </div><!-- media -->
